# giskard_msgs

./: CMakeLists.txt  package.xml
action/: ControllerList.action  Move.action  WholeBody.action
msg/: ArmCommand.msg  CartesianConstraint.msg  CollisionEntry.msg  Constraint.msg  Controller.msg  ControllerFeedback.msg  MoveCmd.msg  SemanticArmCommand.msg  SemanticWholeBodyCommand.msg  Task.msg  WholeBodyCommand.msg  WholeBodyState.msg  WorldBody.msg
srv/: GetAttachedObjects.srv  GetObjectInfo.srv  GetObjectNames.srv  RegisterGroup.srv  UpdateRvizMarkers.srv  UpdateWorld.srv
